--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,8 @@
 #
 ---
 include:
-#  - board: nrfmicro_13
-#    shield: [jorne_left, jorne_right]
+  - board: nrfmicro_13
+    shield: [jorne_left, jorne_right]
 #    name: "Jorne Brass"
 #  - board: nrfmicro_13_52833
 #    shield: [jorne_left, jorne_right]
