--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,8 @@
 include:
   - board: nrfmicro_13
     shield: [jorne_left nice_view_adapter nice_view, jorne_right]
+  - board: nice_nano_v2
+    shield: [jorne_left nice_view_adapter nice_view, jorne_right]
 #    name: "Jorne Brass"
 #  - board: nrfmicro_13_52833
 #    shield: [jorne_left, jorne_right]
