--- a/build.yaml
+++ b/build.yaml
@@ -14,7 +14,7 @@
 ---
 include:
   - board: nrfmicro_13
-    shield: [jorne_left nice_view_adapter nice_view, jorne_right, settings_reset]
+    shield: [jorne_left, jorne_right, settings_reset]
 #  - board: nice_nano_v2
 #    shield: [jorne_left nice_view_adapter nice_view, jorne_right, settings_reset]
 #    name: "Jorne Brass"
